<resources>
    <string name="app_name">Attendance App</string>
    <string name="menu_title">Enter</string>
    <string name="menu_item_1">Register Student</string>
    <string name="nav_drawer_open">Open Drawer</string>
    <string name="nav_drawer_close">Close Drawer</string>
    <string name="title_activity_student_view">StudentView</string>
    <string name="title_activity_class_view">ClassView</string>
    <string name="title_activity_attendance">Attendance</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="select_date">Select Date</string>
    <string name="set_date">Set Date</string>
    <string name="select_class">Select Class</string>
    <string name="title_activity_attendance_view">AttendanceView</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="submit_attendance">Submit Attendance</string>
    <string name="welcome_text">Welcome to Bhargavi Bharata Natyalaya!</string>
    <string name="create_new_class">Create New Class</string>
    <string name="cancel">Cancel</string>
    <string name="class_name">Class Name</string>
    <string name="valid_email">Valid Email</string>
    <string name="classS">Class</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="day_of_week">Day of week</string>
</resources>
